mainMenu.flt added; some problems with slf4j

--- a/src/main/webapp/resources/index.html
+++ b/src/main/webapp/resources/index.html
@@ -8,6 +8,7 @@
 <h3>
     Welcome to the Movie Theater Booking Service
 </h3>
+<p>You are in an unsecure area</p>
 <a href="http://localhost:8080/mainMenu">Main Page</a>
 </body>
 </html>
